logs/29912-javac.exe.out
src\test\java\driver\Driver.java:5: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebDriver;
                          ^
src\test\java\driver\Driver.java:10: error: cannot find symbol
    public static WebDriver webDriver;
                  ^
  symbol:   class WebDriver
  location: class Driver
src\test\java\driver\DriverFactory.java:3: error: package io.github.bonigarcia.wdm does not exist
import io.github.bonigarcia.wdm.WebDriverManager;
                               ^
src\test\java\driver\DriverFactory.java:4: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebDriver;
                          ^
src\test\java\driver\DriverFactory.java:5: error: package org.openqa.selenium.chrome does not exist
import org.openqa.selenium.chrome.ChromeDriver;
                                 ^
src\test\java\driver\DriverFactory.java:6: error: package org.openqa.selenium.firefox does not exist
import org.openqa.selenium.firefox.FirefoxDriver;
                                  ^
src\test\java\driver\DriverFactory.java:7: error: package org.openqa.selenium.ie does not exist
import org.openqa.selenium.ie.InternetExplorerDriver;
                             ^
src\test\java\driver\DriverFactory.java:8: error: package org.openqa.selenium.chrome does not exist
import org.openqa.selenium.chrome.ChromeOptions;
                                 ^
src\test\java\driver\DriverFactory.java:15: error: cannot find symbol
    public static WebDriver getDriver() {
                  ^
  symbol:   class WebDriver
  location: class DriverFactory
src\test\java\org\example\TestImplementation.java:4: error: package org.openqa.selenium does not exist
import org.openqa.selenium.By;
                          ^
src\test\java\org\example\TestImplementation.java:5: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebDriver;
                          ^
src\test\java\org\example\TestImplementation.java:6: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebElement;
                          ^
src\test\java\org\example\TestImplementation.java:7: error: package org.openqa.selenium.chrome does not exist
import org.openqa.selenium.chrome.ChromeDriver;
                                 ^
src\test\java\org\example\TestImplementation.java:13: error: cannot find symbol
    WebDriver driver = new ChromeDriver();
    ^
  symbol:   class WebDriver
  location: class TestImplementation
src\test\java\driver\DriverFactory.java:22: error: cannot find symbol
                WebDriverManager.iedriver().setup();
                ^
  symbol:   variable WebDriverManager
  location: class DriverFactory
src\test\java\driver\DriverFactory.java:23: error: cannot find symbol
                return new InternetExplorerDriver();
                           ^
  symbol:   class InternetExplorerDriver
  location: class DriverFactory
src\test\java\driver\DriverFactory.java:25: error: cannot find symbol
                WebDriverManager.firefoxdriver().setup();
                ^
  symbol:   variable WebDriverManager
  location: class DriverFactory
src\test\java\driver\DriverFactory.java:26: error: cannot find symbol
                return new FirefoxDriver();
                           ^
  symbol:   class FirefoxDriver
  location: class DriverFactory
src\test\java\driver\DriverFactory.java:29: error: cannot find symbol
                WebDriverManager.chromedriver().setup();
                ^
  symbol:   variable WebDriverManager
  location: class DriverFactory
src\test\java\driver\DriverFactory.java:31: error: cannot find symbol
	            ChromeOptions options = new ChromeOptions();
	            ^
  symbol:   class ChromeOptions
  location: class DriverFactory
src\test\java\driver\DriverFactory.java:31: error: cannot find symbol
	            ChromeOptions options = new ChromeOptions();
	                                        ^
  symbol:   class ChromeOptions
  location: class DriverFactory
src\test\java\driver\DriverFactory.java:37: error: cannot find symbol
	            return new ChromeDriver(options);
	                       ^
  symbol:   class ChromeDriver
  location: class DriverFactory
src\test\java\org\example\TestImplementation.java:13: error: cannot find symbol
    WebDriver driver = new ChromeDriver();
                           ^
  symbol:   class ChromeDriver
  location: class TestImplementation
src\test\java\org\example\TestImplementation.java:24: error: cannot find symbol
        WebElement clickCookingButton = driver.findElement(By.xpath("//button[normalize-space()='I accept']"));
        ^
  symbol:   class WebElement
  location: class TestImplementation
src\test\java\org\example\TestImplementation.java:24: error: cannot find symbol
        WebElement clickCookingButton = driver.findElement(By.xpath("//button[normalize-space()='I accept']"));
                                                           ^
  symbol:   variable By
  location: class TestImplementation
src\test\java\org\example\TestImplementation.java:30: error: cannot find symbol
        WebElement searchBox = driver.findElement(By.name("Keywords"));
        ^
  symbol:   class WebElement
  location: class TestImplementation
src\test\java\org\example\TestImplementation.java:30: error: cannot find symbol
        WebElement searchBox = driver.findElement(By.name("Keywords"));
                                                  ^
  symbol:   variable By
  location: class TestImplementation
src\test\java\org\example\TestImplementation.java:36: error: cannot find symbol
        WebElement clickButton = driver.findElement(By.id("btnSubmit"));
        ^
  symbol:   class WebElement
  location: class TestImplementation
src\test\java\org\example\TestImplementation.java:36: error: cannot find symbol
        WebElement clickButton = driver.findElement(By.id("btnSubmit"));
                                                    ^
  symbol:   variable By
  location: class TestImplementation
src\test\java\org\example\TestImplementation.java:42: error: cannot find symbol
        List<WebElement> CountTheElement = driver.findElements(By.linkText("HSE (HEALTH SERVICES EXECUTIVE)"));
             ^
  symbol:   class WebElement
  location: class TestImplementation
src\test\java\org\example\TestImplementation.java:42: error: cannot find symbol
        List<WebElement> CountTheElement = driver.findElements(By.linkText("HSE (HEALTH SERVICES EXECUTIVE)"));
                                                               ^
  symbol:   variable By
  location: class TestImplementation
31 errors
